// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Tests renders the Home page 1`] = `
<article
  class="sc-bcXHqe bZXhLi"
  data-testid="homePage"
>
  <section
    class="sc-dkrFOg bKxbcz"
  >
    <section>
      <ul
        class="sc-jSUZER dpQOsm"
      >
        <li
          aria-current="true"
          class="sc-gKPRtg hYAhSL"
        >
          All
        </li>
        <li
          aria-current="false"
          class="sc-gKPRtg cIyCjv"
        >
          Meat
        </li>
        <li
          aria-current="false"
          class="sc-gKPRtg cIyCjv"
        >
          Vegetarian
        </li>
        <li
          aria-current="false"
          class="sc-gKPRtg cIyCjv"
        >
          Grill
        </li>
        <li
          aria-current="false"
          class="sc-gKPRtg cIyCjv"
        >
          Spicy
        </li>
      </ul>
    </section>
    <section
      class="sc-iBYQkv iseYUE"
    >
      <div
        class="sc-ftTHYK fjYOEb"
      >
        <svg
          class="sc-jrcTuL gGWpXA"
          data-testid="popupIcon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
          />
        </svg>
        <b>
          Sort by
        </b>
        <span
          data-testid="currenChosenSortName"
        >
          rating
        </span>
      </div>
      <section
        aria-hidden="true"
        class="sc-kDvujY kfYMtJ"
      >
        <ul
          aria-hidden="true"
          data-testid="popupList"
        >
          <li
            class="sc-ipEyDJ fKZIlA"
          >
            rating
          </li>
          <li
            class="sc-ipEyDJ jTZUxH"
          >
            price
          </li>
          <li
            class="sc-ipEyDJ jTZUxH"
          >
            A to Z
          </li>
        </ul>
      </section>
    </section>
  </section>
  <section
    class="sc-dkrFOg sc-hLBbgP bKxbcz jHNPko"
  >
    <h2
      class="sc-gswNZR bGFxrF"
    >
      All Pizzas
    </h2>
    <section
      class="sc-csuSiG hrlAfi"
    >
      <svg
        class="sc-eDWCr dvqNhy"
        data-testid="searchIcon"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
        />
      </svg>
      <input
        class="sc-bqWxrE gBpJFS"
        placeholder="Search..."
        value=""
      />
    </section>
  </section>
  <section
    class="sc-cabOPr gPzXiB"
  >
    <article
      class="sc-gikAfH gGGJld"
    >
      <a
        href="/item/3"
      >
        <picture>
          <source
            srcset="./assets/img/pizza3.webp"
            type="image/webp"
          />
          <source
            srcset="./assets/img/pizza3.png"
            type="image/png"
          />
          <img
            alt="Shrimp Pizza pizza"
            class="sc-ezOQGI dZEkIO"
            height="250"
            src="./assets/img/pizza3.png"
            width="250"
          />
        </picture>
        <h3
          class="sc-bYMpWt bAlChL"
        >
          Shrimp Pizza
        </h3>
      </a>
      <section
        class="sc-lllmON cLrsHJ"
      >
        <ul>
          <li
            class="sc-iJnaPW fEkMEg"
          >
            traditional
          </li>
          <li
            class="sc-iJnaPW gTWzVO"
          >
            thin
          </li>
        </ul>
        <ul>
          <li
            class="sc-iJnaPW fEkMEg"
          >
            12
             inch
          </li>
          <li
            class="sc-iJnaPW gTWzVO"
          >
            14
             inch
          </li>
          <li
            class="sc-iJnaPW gTWzVO"
          >
            16
             inch
          </li>
        </ul>
      </section>
      <section
        class="sc-kMjNwy bUSjvo"
      >
        <h3
          class="sc-ilhmMj kRupxC"
        >
          10
          $
        </h3>
        <button
          class="sc-hBxehG sc-idXgbr sc-hHTYSt itXPlc kSxAzc hHiJUO"
        >
          <svg
            class="sc-cwSeag eWircx"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"
            />
          </svg>
          <span>
            Add
          </span>
        </button>
      </section>
    </article>
    <article
      class="sc-gikAfH gGGJld"
    >
      <a
        href="/item/2"
      >
        <picture>
          <source
            srcset="./assets/img/pizza2.webp"
            type="image/webp"
          />
          <source
            srcset="./assets/img/pizza2.png"
            type="image/png"
          />
          <img
            alt="Pepperoni Pizza pizza"
            class="sc-ezOQGI dZEkIO"
            height="250"
            src="./assets/img/pizza2.png"
            width="250"
          />
        </picture>
        <h3
          class="sc-bYMpWt bAlChL"
        >
          Pepperoni Pizza
        </h3>
      </a>
      <section
        class="sc-lllmON cLrsHJ"
      >
        <ul>
          <li
            class="sc-iJnaPW fEkMEg"
          >
            traditional
          </li>
        </ul>
        <ul>
          <li
            class="sc-iJnaPW fEkMEg"
          >
            12
             inch
          </li>
          <li
            class="sc-iJnaPW gTWzVO"
          >
            14
             inch
          </li>
        </ul>
      </section>
      <section
        class="sc-kMjNwy bUSjvo"
      >
        <h3
          class="sc-ilhmMj kRupxC"
        >
          12
          $
        </h3>
        <button
          class="sc-hBxehG sc-idXgbr sc-hHTYSt itXPlc kSxAzc hHiJUO"
        >
          <svg
            class="sc-cwSeag eWircx"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"
            />
          </svg>
          <span>
            Add
          </span>
        </button>
      </section>
    </article>
    <article
      class="sc-gikAfH gGGJld"
    >
      <a
        href="/item/6"
      >
        <picture>
          <source
            srcset="./assets/img/pizza6.webp"
            type="image/webp"
          />
          <source
            srcset="./assets/img/pizza6.png"
            type="image/png"
          />
          <img
            alt="Diablo pizza"
            class="sc-ezOQGI dZEkIO"
            height="250"
            src="./assets/img/pizza6.png"
            width="250"
          />
        </picture>
        <h3
          class="sc-bYMpWt bAlChL"
        >
          Diablo
        </h3>
      </a>
      <section
        class="sc-lllmON cLrsHJ"
      >
        <ul>
          <li
            class="sc-iJnaPW fEkMEg"
          >
            traditional
          </li>
          <li
            class="sc-iJnaPW gTWzVO"
          >
            thin
          </li>
        </ul>
        <ul>
          <li
            class="sc-iJnaPW fEkMEg"
          >
            12
             inch
          </li>
          <li
            class="sc-iJnaPW gTWzVO"
          >
            16
             inch
          </li>
        </ul>
      </section>
      <section
        class="sc-kMjNwy bUSjvo"
      >
        <h3
          class="sc-ilhmMj kRupxC"
        >
          15
          $
        </h3>
        <button
          class="sc-hBxehG sc-idXgbr sc-hHTYSt itXPlc kSxAzc hHiJUO"
        >
          <svg
            class="sc-cwSeag eWircx"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"
            />
          </svg>
          <span>
            Add
          </span>
        </button>
      </section>
    </article>
  </section>
</article>
`;

exports[`Home Tests renders the Home page with a server requesr error 1`] = `
<article
  class="sc-bcXHqe bZXhLi"
  data-testid="homePage"
>
  <section
    class="sc-dkrFOg bKxbcz"
  >
    <section>
      <ul
        class="sc-jSUZER dpQOsm"
      >
        <li
          aria-current="true"
          class="sc-gKPRtg hYAhSL"
        >
          All
        </li>
        <li
          aria-current="false"
          class="sc-gKPRtg cIyCjv"
        >
          Meat
        </li>
        <li
          aria-current="false"
          class="sc-gKPRtg cIyCjv"
        >
          Vegetarian
        </li>
        <li
          aria-current="false"
          class="sc-gKPRtg cIyCjv"
        >
          Grill
        </li>
        <li
          aria-current="false"
          class="sc-gKPRtg cIyCjv"
        >
          Spicy
        </li>
      </ul>
    </section>
    <section
      class="sc-iBYQkv iseYUE"
    >
      <div
        class="sc-ftTHYK fjYOEb"
      >
        <svg
          class="sc-jrcTuL gGWpXA"
          data-testid="popupIcon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
          />
        </svg>
        <b>
          Sort by
        </b>
        <span
          data-testid="currenChosenSortName"
        >
          rating
        </span>
      </div>
      <section
        aria-hidden="true"
        class="sc-kDvujY kfYMtJ"
      >
        <ul
          aria-hidden="true"
          data-testid="popupList"
        >
          <li
            class="sc-ipEyDJ fKZIlA"
          >
            rating
          </li>
          <li
            class="sc-ipEyDJ jTZUxH"
          >
            price
          </li>
          <li
            class="sc-ipEyDJ jTZUxH"
          >
            A to Z
          </li>
        </ul>
      </section>
    </section>
  </section>
  <section
    class="sc-dkrFOg sc-hLBbgP bKxbcz jHNPko"
  >
    <h2
      class="sc-gswNZR bGFxrF"
    >
      All Pizzas
    </h2>
    <section
      class="sc-csuSiG hrlAfi"
    >
      <svg
        class="sc-eDWCr dvqNhy"
        data-testid="searchIcon"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
        />
      </svg>
      <input
        class="sc-bqWxrE gBpJFS"
        placeholder="Search..."
        value=""
      />
    </section>
  </section>
  <section
    class="sc-eDvSVe jKghvf"
  >
    <h2>
      Request Error
    </h2>
    <p>
      Coudn't get store items. Try your request again later.
    </p>
  </section>
</article>
`;
